# LogViewer

./: .actrc  .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  COMPILATION_FIXES.md  CONTRIBUTING.md  Doxyfile  IMPROVEMENTS_SUMMARY.md  LOGGING_AND_ERROR_MIGRATION.md  LogViewer.code-workspace  README.md  WINDOWS_CRASH_ACTION_PLAN.md  WINDOWS_DEBUG_DEPLOYMENT.md  annotated.html  annotated_dup.js  build_debug.sh  classes.html  concepts.html  concepts.js  config.json  configure_debug.sh  cppcheck_output.txt  dir_000001_000010.html  dir_000001_000015.html  dir_000001_000016.html  dir_000002_000003.html  dir_000002_000005.html  dir_000002_000006.html  dir_000002_000015.html  dir_000003_000008.html  dir_000003_000015.html  dir_000004_000002.html  dir_000004_000007.html  dir_000005_000000.html  dir_000005_000013.html  dir_000005_000015.html  dir_000006_000001.html  (+334 more)
etc/: CMakeLists.txt  config.json  config_openai_example.json  default_config.json  ertms_logs.xml  example_log.xml  example_log_10k.xml  field_dictionary.json  generate_log.py  generate_sequence_log.py  qt.conf  sequence_example.xml
etc/prompts/: README.md  crash_analysis.txt  database_issues.txt  network_diagnostics.txt  performance_analysis.txt  security_audit.txt  sequence_diagram.txt  uml_seq.txt  user_experience.txt
examples/: CMakeLists.txt
examples/BasicPlugin/: CMakeLists.txt  README.md  config.json.in
examples/BasicPlugin/src/: BasicPlugin.cpp
libs/qt/: CMakeLists.txt
libs/wx/: CMakeLists.txt
packaging/: CMakeLists.txt  CODE_SIGNING_README.md  DS_Store.scpt  LogViewer.desktop  LogViewer.icns  LogViewer.manifest  LogViewer.rc.in  MacOSXBundleInfo.plist.in  create_self_signed_cert.bat  create_self_signed_cert.ps1  entitlements.plist
plugins/: CMakeLists.txt
plugins/ai/: AIAnalysisPanel.cpp  AIAnalysisPanel.hpp  AIChatPanel.cpp  AIChatPanel.hpp  AIConfigPanel.cpp  AIConfigPanel.hpp  AIProviderPlugin.cpp  AIProviderPlugin.hpp  AIServiceFactory.cpp  AIServiceFactory.hpp  AnthropicClient.cpp  AnthropicClient.hpp  CMakeLists.txt  Config.hpp  GeminiClient.cpp  GeminiClient.hpp  IAIService.hpp  LLMClient.hpp  LogAnalyzer.cpp  LogAnalyzer.hpp  OllamaClient.cpp  OllamaClient.hpp  OllamaSetupDialog.cpp  OpenAIClient.cpp  OpenAIClient.hpp  config.json.in
plugins/event_metrics/: CMakeLists.txt  EventMetricsConfigWidget.cpp  EventMetricsConfigWidget.hpp  EventMetricsPlugin.cpp
plugins/field_converter_example/: CMakeLists.txt  ToUpperCasePlugin.cpp  config.json.in
plugins/log_anomaly_metrics/: AnomalyChartWidget.cpp  AnomalyChartWidget.hpp  LogAnomalyMetricsPlugin.cpp  LogAnomalyMetricsPlugin.hpp  MetricsEngine.cpp  MetricsEngine.hpp
plugins/ssh_parser/: README.md  SSHConnection.cpp  SSHConnectionWidget.cpp  SSHConnectionWidget.hpp  SSHLogSource.cpp  SSHLogSource.hpp  SSHParserPlugin.cpp  SSHParserPlugin.hpp  SSHTerminalWidget.cpp  SSHTerminalWidget.hpp  SSHTextParser.cpp  SSHTextParser.hpp
src/: CMakeLists.txt  Info.plist  MyApp.cpp  MyApp.hpp  main.cpp  main_windows.cpp  main_windows.hpp
src/DB/: event.cpp  event.hpp  events_container.hpp
src/GUI/: events_virtual_list_control.cpp  events_virtual_list_control.hpp  item_list_view.cpp  item_list_view.hpp  main_window.cpp  main_window.hpp
src/MVC/: model.hpp  view.hpp
src/application/: CMakeLists.txt
src/application/ai/: AIServiceFactory.cpp  AIServiceFactory.hpp  AnthropicClient.cpp  AnthropicClient.hpp  GeminiClient.cpp  GeminiClient.hpp  IAIService.hpp  LLMClient.hpp  LogAnalyzer.cpp  LogAnalyzer.hpp  OllamaClient.cpp  OllamaClient.hpp  OpenAIClient.cpp  OpenAIClient.hpp
src/application/command/: EventCommands.cpp  EventCommands.hpp  ICommand.cpp  ICommand.hpp
src/application/config/: BuiltinConversionPlugins.cpp  BuiltinConversionPlugins.hpp  CMakeLists.txt  CmakeLists.txt  Config.cpp  Config.hpp  ConfigObserver.hpp  FieldConversionPluginRegistry.cpp  FieldConversionPluginRegistry.hpp  FieldTranslator.cpp  FieldTranslator.hpp  StringReversePlugin.cpp  StringReversePlugin.hpp
src/application/csv/: CsvParser.cpp  CsvParser.hpp
src/application/db/: CMakeLists.txt  EventsContainer.cpp  EventsContainer.hpp  LogEvent.cpp  LogEvent.hpp  event.cpp  event.hpp  events_container.hpp
src/application/error/: CMakeLists.txt  Error.hpp
src/application/filters/: CMakeLists.txt  Filter.cpp  Filter.hpp  FilterManager.cpp  FilterManager.hpp  IFilterStrategy.cpp  IFilterStrategy.hpp
src/application/gui/: ConfigEditorDialog.cpp  ConfigEditorDialog.hpp  CustomDataModel.cpp  CustomDataModel.hpp  EventsContainerAdapter.cpp  EventsContainerAdapter.hpp  EventsVirtualListControl.cpp  EventsVirtualListControl.hpp  FilterEditorDialog.cpp  FilterEditorDialog.hpp  FiltersPanel.cpp  FiltersPanel.hpp  ItemVirtualListControl.cpp  ItemVirtualListControl.hpp  MainWindow.cpp  MainWindow.hpp  WrappingTextRenderer.cpp  WrappingTextRenderer.hpp  events_virtual_list_control.cpp  events_virtual_list_control.hpp  item_list_view.cpp  item_list_view.hpp  main_window.cpp  main_window.hpp
src/application/mvc/: CMakeLists.txt  IControler.hpp  IModel.hpp  IModelObservable.hpp  IView.hpp  MainController.cpp  MainController.hpp  Model.hpp  model.hpp
src/application/parser/: IDataParser.hpp  ParserFactory.cpp  ParserFactory.hpp  data_parser.hpp  wxStdInputStreamAdapter.hpp
src/dox/: architecture.dox  overview.dox
src/main/: CMakeLists.txt  Info.plist  MyApp.cpp  MyApp.hpp  MyAppQt.cpp
src/parser/: data_parser.hpp
src/plugin_api/: CMakeLists.txt  IPlugin.hpp  PluginAIProviderC.h  PluginC.h  PluginEventsC.h  PluginHostUiC.h  PluginKeyEncryptionC.h  PluginLoggerC.cpp  PluginLoggerC.h  PluginTypesC.h
src/plugins/: CMakeLists.txt
tests/: ArchitectureImprovementsTests.cpp  BuiltinConversionPluginsTest.cpp  CMakeLists.txt  CsvParserTest.cpp  DataParserTest.cpp  EventTest.cpp  EventsContainerTest.cpp  FieldTranslatorTest.cpp  FilterManagerTest.cpp  FilterStrategyTest.cpp  FilterTest.cpp  KeyEncryptionTest.cpp  ModelTest.cpp  ParserFactoryTest.cpp  ResultTest.cpp  XmlParserTest.cpp  test_event.cpp  wxStdInputStreamAdapterTest.cpp
(+4678 files in other folders)
